<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:backgroundTintMode="src_in"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:text="@string/app_name"
        android:textColor="@color/text_primary"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />


    <TextView
        android:id="@+id/allWords"
        android:layout_width="fill_parent"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guide_game_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/wordsCount"
        android:layout_width="fill_parent"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="5dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guide_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_game_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <ImageView
        android:id="@+id/letters_container"
        android:layout_width="@dimen/letters_container"
        android:layout_height="@dimen/letters_container"
        android:layout_marginBottom="7dp"
        android:background="@drawable/circle_shape"
        android:contentDescription="@string/err_unknown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/controls_frame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/light_blue_secondary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_controls">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/userWord"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginStart="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/round_square_shape"
                android:backgroundTint="#45D3CFCF"
                android:backgroundTintMode="src_in"
                android:foregroundTint="#000000"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/letter_textSize"
                app:layout_constraintEnd_toStartOf="@+id/help_img"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/shuffle_img"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/shuffle_img"
                android:layout_width="@dimen/button_utils"
                android:layout_height="@dimen/button_utils"
                android:layout_marginStart="7dp"
                android:background="@drawable/ic_shuffle"
                app:backgroundTint="@color/text_primary"
                android:backgroundTintMode="src_in"
                android:contentDescription="@string/shuffle_desc"
                android:onClick="shuffleLetters"
                app:layout_constraintBaseline_toBaselineOf="@+id/help_img"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/text_primary" />

            <RelativeLayout
                android:id="@+id/hintsLayout"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="7dp"
                android:layout_marginBottom="7dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/hintsInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"
                    android:textColor="@color/text_primary"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/medal_img"
                    android:layout_width="@dimen/button_utils"
                    android:layout_height="@dimen/button_utils"
                    android:layout_marginStart="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/ic_medal"
                    android:contentDescription="@string/medal_desc"
                    android:onClick="showHints"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:backgroundTint="@color/text_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/text_primary" />

            </RelativeLayout>

            <Button
                android:id="@+id/help_img"
                android:layout_width="@dimen/button_utils"
                android:layout_height="@dimen/button_utils"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:background="@drawable/help"
                app:backgroundTint="@color/text_primary"
                android:contentDescription="@string/help_desc"
                android:onClick="loadHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/text_primary" />

            <Button
                android:id="@+id/new_game_img"
                android:layout_width="@dimen/button_utils"
                android:layout_height="@dimen/button_utils"
                android:layout_marginEnd="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/ic_new_game"
                app:backgroundTint="@color/text_primary"
                android:contentDescription="@string/new_game_desc"
                android:onClick="restartGame"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/text_primary" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>